--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
 		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
+		"test": "node ./out/test/runTest.js",
+		"package": "npm run compile && npx vsce package"
 	},
 	"devDependencies": {
 		"@types/vscode": "^1.67.0",
