--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,9 +8,7 @@
 	},
 	// Turn off tsc task auto detection since we have the necessary tasks as npm scripts
 	"typescript.tsc.autoDetect": "off",
+	"[typescript]": { "editor.formatOnSave": true },
 	"cSpell.words": ["mtml"],
-	"cSpell.files": [
-		"src/*Provider.ts",
-		"src/Utils.ts"
-	]
+	"cSpell.files": ["src/*Provider.ts", "src/Utils.ts"]
 }
