--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"vscode": "^1.67.0"
 	},
 	"publisher": "fhiromasa",
+	"icon": "images/icon.png",
 	"license": "MIT",
 	"homepage": "",
 	"repository": {
